# testability-patterns-c

./: .gitignore  README.md  setup.sh
testable-multiple-instance-module/: CMakeLists.txt
testable-multiple-instance-module/inc/: module_under_test.h
testable-multiple-instance-module/src/: module_under_test.c  module_under_test_internals.h
testable-multiple-instance-module/test/: module_under_test_test.cc
testable-single-instance-module/: CMakeLists.txt
testable-single-instance-module/inc/: module_under_test.h
testable-single-instance-module/src/: module_under_test.c  module_under_test_internals.h
testable-single-instance-module/test/: module_under_test_test.cc
